# spmallick-dlib

./: .gitignore  CMakeLists.txt  README.md  编译错误的解决.txt
dlib/: config.h  test_for_odr_violations.h
examples/: CMakeLists - 副本.txt  CMakeLists.txt  pic_head_pose.cpp  video2pic.cpp
